--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -3,7 +3,7 @@
   "robotLength": 0.85,
   "holonomicMode": true,
   "pathFolders": [
-    "ExampleAuto"
+    "Clackamas"
   ],
   "autoFolders": [],
   "defaultMaxVel": 3.0,
