--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -3,9 +3,12 @@
   "robotLength": 0.85,
   "holonomicMode": true,
   "pathFolders": [
-    "Clackamas"
+    "Clackamas",
+    "Sundome"
   ],
-  "autoFolders": [],
+  "autoFolders": [
+    "New Folder"
+  ],
   "defaultMaxVel": 3.0,
   "defaultMaxAccel": 3.0,
   "defaultMaxAngVel": 540.0,
